--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 	<header>
 		<div class="container">
 			<div class="row justify-content-between main-header">
-				<div class="col-md-2 col-sm-4 col-4">
+				<!-- <div class="col-md-2 col-sm-4 col-4">
 					<div class="logo">
 						<img class="logo-img" src="images/3dglo.png" alt="...">
 
 					</div>
-				</div>
+				</div> -->
 				<div class="col-md-4 col-md-offset-6 col-sm-4 col-sm-offset-2 col-5 col-offset-0">
 					<div class="media phone-media">
 						<div class="media-left media-middle">
@@ -378,11 +378,11 @@
 		<div class="line"></div>
 		<div class="row">
 			<div class="col-md-6 col-sm-6 col-12 d-flex align-items-center">
-				<p>2020. Все права защищены</p>
+				<p>2021. Все права защищены</p>
 			</div>
-			<div class="col-md-6 col-sm-6 col-12 web">
+			<!-- <div class="col-md-6 col-sm-6 col-12 web">
 				<img src="./images/footer/academy.png" alt="">
-			</div>
+			</div> -->
 		</div>
 	</div>
 </footer>
