--- a/index.html
+++ b/index.html
@@ -410,6 +410,29 @@
 		</div>
 	</div>
 </div>
-<script src="./script/script.js"></script>
+<script src="./plugins/validator/validator.js"></script>
+<script>
+
+	const valid = new Validator({
+		pattern: {
+			name: /^\+380\d{7}$/,
+			zip: /\d{5,6}/
+		},
+		method: {
+			'name': [
+				['notEmpty'],
+				['pattern', 'name']
+			],
+			'email': [
+				['notEmpty'],
+				['pattern', 'email']
+			]
+		},
+		selector: 'form1'
+	});
+
+	valid.init();
+</script>
+<!-- <script src="./script/script.js"></script> -->
 </body>
 </html>
