--- a/index.html
+++ b/index.html
@@ -436,8 +436,11 @@
 	const validForm2 = new Validator({
 		selector: '#form2',
 		pattern: {
-			name: /^\+380\d{7}$/,
-			zip: /\d{5,6}/
+			name: /[а-я]/gi,
+			phone: /^\+\d{10}$/,
+			zip: /\d{5,6}/,
+			email: /[\w\s@]/,
+			mess: /[а-я]/gi
 		},
 		method: {
 			'name': [
@@ -479,7 +482,7 @@
 			]
 		}
 	});
-	
+
 	validForm1.init();
 	validForm2.init();
 	validForm3.init();
