--- a/index.html
+++ b/index.html
@@ -410,6 +410,6 @@
 		</div>
 	</div>
 </div>
-<script src="dist/dev-bundle.js"></script>
+<script src="./script/script.js"></script>
 </body>
 </html>
